--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "require-dev": {
         "phpunit/phpunit": "^11.1"
     },
-  "require": {
-    "ext-mbstring": "*"
-  }
+    "require": {
+        "php": ">=8.2",
+        "ext-mbstring": "*"
+    }
 }
