--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,19 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^11.1"
+        "phpunit/phpunit": "^11.1",
+        "phpro/grumphp": "^2.5",
+        "squizlabs/php_codesniffer": "^3.9",
+        "phpmd/phpmd": "^2.15",
+        "vimeo/psalm": "^0.3.14"
     },
     "require": {
         "php": ">=8.2",
         "ext-mbstring": "*"
+    },
+    "config": {
+        "allow-plugins": {
+            "phpro/grumphp": true
+        }
     }
 }
