--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "phpro/grumphp": "^2.5",
         "squizlabs/php_codesniffer": "^3.9",
         "phpmd/phpmd": "^2.15",
-        "vimeo/psalm": "^0.3.14"
+        "phan/phan": "^5.4"
     },
     "require": {
         "php": ">=8.2",
