--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
             "email": "mikhail.d.savin@gmail.com"
         }
     ],
+    "license": "MIT",
     "require-dev": {
         "phpunit/phpunit": "^11.1",
         "phpro/grumphp": "^2.5",
