--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "phpro/grumphp": "^2.5",
         "squizlabs/php_codesniffer": "^3.9",
         "phpmd/phpmd": "^2.15",
-        "phan/phan": "^5.4"
+        "phan/phan": "^5.4",
+        "rector/rector": "^1.1"
     },
     "require": {
         "php": ">=8.2",
